@@ -170,12 +170,83 @@ _wrap_g_file_load_contents(PyGObject *self,
         return Py_None;      
     }
 }
+%%
+override g_file_load_contents_async kwargs
+static PyObject *
+_wrap_g_file_load_contents_async(PyGObject *self,
+                                 PyObject *args,
+                                 PyObject *kwargs)
+{
+    static char *kwlist[] = { "callback", "cancellable", "user_data", NULL };
+    GCancellable *cancellable;
+    PyGObject *pycancellable = NULL;
+    PyGAsyncRequestNotify *notify;
+  
+    notify = g_slice_new0(PyGAsyncRequestNotify);
+    
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+                                     "O|OO:File.load_contents_async",
+                                      kwlist,
+                                      &notify->callback,
+                                      &pycancellable,
+                                      &notify->data))
+            
+    {
+      g_slice_free(PyGAsyncRequestNotify, notify);
+      return NULL;
+    }
+
+    if (!pygio_check_cancellable(pycancellable, &cancellable))
+        return NULL;
+
+    g_file_load_contents_async(G_FILE(self->obj),
+                            cancellable,
+                            (GAsyncReadyCallback)async_result_callback_marshal,
+                            notify);
+
+    Py_INCREF(Py_None);
+    return Py_None;
+}
+%%
+override g_file_load_contents_finish kwargs
+static PyObject *
+_wrap_g_file_load_contents_finish(PyGObject *self,
+                           PyObject *args,
+                           PyObject *kwargs)
+{
+    static char *kwlist[] = { "res", NULL };
+    PyGObject *res;
+    gchar *contents, *etag_out;
+    gsize lenght;
+    GError *error = NULL;
+    gboolean ret;
+    
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+                                     "O!:File.load_contents_finish",
+                                      kwlist,
+                                      &PyGAsyncResult_Type,
+                                      &res))
+        return NULL;
+
+    ret = g_file_load_contents_finish(G_FILE(self->obj),
+                                      G_ASYNC_RESULT(res->obj), &contents,
+                                      &lenght, &etag_out, &error);
+
+    if (pyg_error_check(&error))
+        return NULL;
+
+    if (ret)
+        return Py_BuildValue("(sks)", contents, lenght, etag_out);
+    else {
+        Py_INCREF(Py_None);
+        return Py_None;      
+    }
+}
 /* GFile.append_to_async */
 /* GFile.create_async */
 /* GFile.enumerate_children_async */
 /* GFile.eject_mountable */
 /* GFile.find_enclosing_mount_async */
-/* GFile.load_contents_async */
 /* GFile.mount_enclosing_volume */
 /* GFile.mount_mountable */
 /* GFile.query_info_async */
@@ -191,7 +262,6 @@ _wrap_g_file_load_contents(PyGObject *self,
 /* GFile.query_writable_namespaces: No ArgType for GFileAttributeInfoList* */
 /* GFile.set_attribute: No ArgType for gpointer */
 /* GFile.set_attributes_finish: No ArgType for GFileInfo** */
-/* GFile.load_contents_finish: No ArgType for char** */
 /* GFile.load_partial_contents_finish: No ArgType for char** */
 /* GFile.replace_contents: No ArgType for char** */
 /* GFile.replace_contents_finish: No ArgType for char** */
